# digikam-pgvector

./: .gitignore  README.md  benchmark.py  calculate-haar-distance.py  find-duplicates.txt  find-non-camera-images.py  move-reference-images.py  mysql_to_pgvector.py  pyproject.toml  remove-duplicates.py  schema.sql
digikam-haar/: haar.cpp  haar.h  haariface.cpp  haariface.h  haariface_p.cpp  haariface_p.h
digikam_pgvector_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
